# SPDX-FileCopyrightText: 2025 Konrad Weihmann
# SPDX-License-Identifier: GPL-3.0-only

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "1.7.0"
tag = false
commit = false

[tool.setuptools]
dynamic.optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
include-package-data = false
packages.find.where = ["."] 
packages.find.exclude = ["docs*", "tests*", ".*tests*", "tests", ".*tests.*"]

[tool.pytest.ini_options]
addopts = "--cov=scabot --cov-fail-under=100 --cov-report term-missing --cov-branch --forked --no-header --quiet --random-order --random-order-bucket=global --showlocals -rs"

[tool.flake8]
no-accept-encodings = true
max-line-length = 127
max-complexity = 10
ignore = [
    "C901",
    "CFQ001",
    "CFQ002",
    "CFQ004",
    "D1",
    "D2",
    "D4",
    "DAR",
    "E261",
    "E302",
    "E501",
    "I001",
    "I005",
    "N802",
    "N803",
    "N806",
    "Q000",
    "T201",
    "VNE001",
    "W504"
]
exclude = [ "tests/*" ]
statistics = false

[project]
name = "scabot"
requires-python = ">= 3.9"
version = "1.7.0"
description = "Licensing check for different backends"
readme = "README.md"
maintainers = [
  {name = "Konrad Weihmann", email = "kweihmann@outlook.com"}
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "github3.py ~= 4.0",
  "python-gitlab ~= 6.3",
  "requests ~= 2.32",
  "tenacity ~= 9.1",
  "unidiff ~= 0.7",
]
dynamic = ["optional-dependencies"]

[project.scripts]
scabot = "scabot.__main__:main"

[project.urls]
homepage = "https://github.com/priv-kweihmann/scabot"
repository = "https://github.com/priv-kweihmann/scabot.git"
bugtracker = "https://github.com/priv-kweihmann/scabot/issues"
